# soccer_description

./: CMakeLists.txt  package.xml
launch/: soccerbot_rviz.launch
meshes/soccerbot v4/: Head.dae  Left Ankle.dae  Left Calve.dae  Left Foot.dae  Left Hip Front.dae  Left Hip Side.dae  Left Thigh.dae  Right Ankle.dae  Right Calve.dae  Right Foot.dae  Right Hip Front.dae  Right Hip Side.dae  Right Thigh.dae  Torso.dae
meshes/soccerbot v4/Old/: Neck.dae
models/: arm.xacro  leg.xacro  soccerbot.gazebo  soccerbot.xacro
models/soccerbot/: dh.table  model.config  model.gazebo  model.urdf  model.xacro  model_frozen.xacro
models/soccerbot v3/: model.urdf
models/soccerbot v4/: .model.urdf.swp  model.config
rviz/: soccerbot.rviz
